--- a/CSCI222-Group1.cbp
+++ b/CSCI222-Group1.cbp
@@ -41,6 +41,8 @@
 		<Unit filename="FunctionalitiesManagement.h" />
 		<Unit filename="PCChair.cpp" />
 		<Unit filename="PCChair.h" />
+		<Unit filename="PaperAssignment.cpp" />
+		<Unit filename="PaperAssignment.h" />
 		<Unit filename="PaperManagement.cpp" />
 		<Unit filename="PaperManagement.h" />
 		<Unit filename="PaperReview.cpp" />
